added link meny to the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<!-- Menu Bar -->
+<div class="ui menu">
+  <div class="ui container">
+    <a routerLink="/home" routerLinkActive="active" class="item">
+      Home
+    </a>
+    <a routerLink="/about" routerLinkActive="active" class="item">
+      About
+    </a>
+  </div>
+</div>
 <router-outlet></router-outlet>
