products added to app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,12 @@
     <a routerLink="/about" routerLinkActive="active" class="item">
       About
     </a>
+    <a routerLink="/products" routerLinkActive="active" class="item">
+      Products
+    </a>
+    <a routerLink="/article" routerLinkActive="active" class="item">
+      Article
+    </a>
   </div>
 </div>
 <router-outlet></router-outlet>
