--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid posts">
 	<app-product
-		*ngFor="let product of products"
+		*ngFor="let product of products?.products"
 		[product]="product">
 	</app-product>
 </div>
