--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,5 @@
 <div class="ui grid posts">
-	<app-product
-		*ngFor="let product of products"
+	<app-product *ngFor="let product of products"
 		[product]="product">
 	</app-product>
 </div>
