--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,9 @@
 <div class="ui grid posts">
-	<app-product *ngFor="let product of products"
-		[product]="product">
-	</app-product>
+  <div class="row" 
+  *ngFor="let product of products">
+    <app-product 
+	[product]="product" 
+	*ngIf="product.quantity > 0">
+    </app-product>
+  </div>
 </div>
