pending dont get undefined state anymore, ngIf statement edited

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="ui grid posts">
-  <div *ngIf="pending === true">Получаем товары. Пожалуйста подождите...</div>
+  <div *ngIf="pending">Получаем товары. Пожалуйста подождите...</div>
   <div class="row" 
   *ngFor="let product of products">
     <app-product 
