selfclosing-alert renamed to popup, add more functionality to popup for reuse

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,11 @@ ul.ui.list li:before {
   width: 124px;
   height: 124px;
 }
+
+.popup {
+width: 250px;
+position: fixed;
+left: 5px;
+top: 50px;
+z-index: 999999;
+}
