--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -1,1 +1,1 @@
-<ngb-alert *ngIf="show" type="{{ type }}" (close)="show = false" [dismissible]="{{ dismissible }}">{{ text }}</ngb-alert>
+<ngb-alert *ngIf="show" type="{{ type }}" (close)="show = false" [dismissible]="dismissible">{{ text }}</ngb-alert>
