--- a/src/styles.css
+++ b/src/styles.css
@@ -56,9 +56,10 @@ ul.ui.list li:before {
 }
 
 .popup {
-width: 250px;
-position: fixed;
-left: 5px;
-top: 50px;
-z-index: 999999;
+  width: 250px;
+  position: fixed;
+  left: 50%;
+  top: 5%;
+  margin-left: -125px;
+  z-index: 999999;
 }
