--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -17,4 +17,7 @@
       Есть на складе: {{ product.quantity }}
     </li>
   </ul>
+  <div>
+    <button type="button" class="btn btn-success" (click)="addToCart()">Add To Cart</button>
+  </div>
 </div>
