Article removed from route, ShopingCartService now in app.module providers, Cart added to routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
     <a routerLink="/products" routerLinkActive="active" class="item">
       Products
     </a>
-    <a routerLink="/article" routerLinkActive="active" class="item">
-      Article
+    <a routerLink="/cart" routerLinkActive="active" class="item">
+      Cart
     </a>
   </div>
 </div>
