--- a/src/app/shoping-cart/shoping-cart.component.html
+++ b/src/app/shoping-cart/shoping-cart.component.html
@@ -1,3 +1,10 @@
-<p>
-  shoping-cart works!
-</p>
+<table class="table">
+  <tr>
+    <th>Имя товара</th>
+    <th>Цена товара</th>
+  </tr>
+  <tr *ngFor="let product of productsInCart">
+    <td>{{ product.name }}</td>
+    <td>{{ product.price }}</td>
+  </tr>
+</table>
