a terrible grammar mistake has been fixed, btw currency pipe added to product template

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -11,7 +11,7 @@
  <div class="meta">{{ product.description }}</div>
   <ul class="ui big horizontal list voters">
     <li class="item">
-      Цена: {{ product.price }}
+      Цена: {{ product.price | currency:'USD':true:'1.2-2' }}
     </li>
     <li class="item">
       Есть на складе: {{ product.quantity }}
