--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -1,4 +1,4 @@
-<ngb-alert *ngFor="let popup of data" 
+<ngb-alert *ngFor="let popup of popupData" 
 type="{{ popup.type }}"
 [dismissible]="popup.dismissible" 
 (close)="closePopup(popup)">{{ popup.text }}</ngb-alert>
