popup removed on products, popup on button click added into shopping cart

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -22,3 +22,4 @@
     <td>{{ getTotalSum() | currency:'USD':true:'1.2-2' }}</td>
   </tfoot>
 </table>
+<button type="button" class="btn btn-success btn-lg float-right" (click)="checkout()">Checkout</button>
