new feature added to menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@
       Products
     </a>
     <a routerLink="/cart" routerLinkActive="active" class="item">
-      Cart
+      Cart 
+      <span class="products-quantity" *ngIf="cartProductQuantity > 0">{{ cartProductQuantity }}</span>
     </a>
   </div>
 </div>
