link to products catalog added in cart, now text-placeholder displays then cart is empty

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,25 +1,29 @@
-<table class="table">
-  <thead>
-  <tr>
-    <th>Имя товара</th>
-    <th>Цена товара</th>
-    <th>Количество</th>
-    <th>Сумма</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let cartproduct of cartProducts">
-    <td>{{ cartproduct.product.name }}</td>
-    <td>{{ cartproduct.product.price | currency:'USD':true:'1.2-2' }}</td>
-    <td>{{ cartproduct.quantity }}</td>
-    <td>{{ cartproduct.product.price * cartproduct.quantity | currency:'USD':true:'1.2-2' }}</td>
-  </tr>
-  </tbody>
-  <tfoot>
-    <td></td>
-    <td></td>
-    <td>Сумма:</td>
-    <td>{{ getTotalSum() | currency:'USD':true:'1.2-2' }}</td>
-  </tfoot>
-</table>
-<button type="button" class="btn btn-success btn-lg float-right" (click)="checkout()">Checkout</button>
+<div *ngIf="!getProductsQuantity()" class="center-block">В корзине пока нет товаров...</div>
+<div *ngIf="getProductsQuantity()">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Имя товара</th>
+        <th>Цена товара</th>
+        <th>Количество</th>
+        <th>Сумма</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let cartproduct of cartProducts">
+        <td>{{ cartproduct.product.name }}</td>
+        <td>{{ cartproduct.product.price | currency:'USD':true:'1.2-2' }}</td>
+        <td>{{ cartproduct.quantity }}</td>
+        <td>{{ cartproduct.product.price * cartproduct.quantity | currency:'USD':true:'1.2-2' }}</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <td></td>
+      <td></td>
+      <td>Сумма:</td>
+      <td>{{ getTotalSum() | currency:'USD':true:'1.2-2' }}</td>
+    </tfoot>
+  </table>
+  <button type="button" class="btn btn-success btn-lg float-right" (click)="checkout()">Checkout</button>
+</div>
+<a routerLink="/products" routerLinkActive="active" class="btn btn-success btn-lg">Перейти в каталог</a>
