--- a/src/styles.css
+++ b/src/styles.css
@@ -68,3 +68,10 @@ ul.ui.list li:before {
   color: black;
   font-weight: bold;
 }
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
