quantity change behavior added

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -18,7 +18,8 @@
         id="quantity" 
         value="{{ cartproduct.quantity }}"
         required
-        [(ngModel)]="cartproduct.quantity" name="quantity" #quantity="ngModel">
+        [(ngModel)]="cartproduct.quantity" name="quantity" #quantity="ngModel"
+        (ngModelChange)="cartProductsQuantityChanged(cartproduct)">
         <div [hidden]="(quantity.valid || quantity.pristine) && quantity.value > 0"
              class="alert alert-danger">
           Quantity is required and must be more then zero
