--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ ul.ui.list li:before {
   font-weight: bold;
 }
 
-.ng-valid[required], .ng-valid.required  {
+.ng-valid, .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
 .ng-invalid:not(form)  {
