delete product button logic in cart has been implemented; some refactor in ShopingCartService

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -24,7 +24,7 @@
         </td>
         <td>{{ cartproduct.product.price * cartproduct.quantity | currency:'USD':true:'1.2-2' }}</td>
         <td>
-          <button type="button" class="close" aria-label="Close">
+          <button type="button" class="close" aria-label="Close" (click)="removeProductFromCart(cartproduct)">
             <span aria-hidden="true">&times;</span>
           </button>
         </td>
