--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid posts">
 	<div class="loader-container" *ngIf="pending">
-		<div>Получаем товары. Пожалуйста подождите...</div>
+		<div>{{ 'Catalog.pendingMessage' | translate }}</div>
 		<div class="loader"></div>
 	</div>
 	<app-product *ngFor="let product of products | quantityFilter"
