--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!cartProducts.length" class="center-block">В корзине пока нет товаров...</div>
+<div *ngIf="!cartProducts.length" class="center-block">{{ 'Cart.noProdMsg' | translate }}</div>
 <div *ngIf="cartProducts.length">
   <table class="table">
     <thead>
