--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
 		<div class="loader"></div>
 	</div>
 	</div>
-<div class="ui grid posts products-container">
+<div class="ui grid posts products-container" [ngClass]="{'opacity15' : pending}">
 	<app-product *ngFor="let product of products | quantityFilter"
 		[product]="product">
 	</app-product>
