pending animation added to cart

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="center-container">
 	<div class="loader-container" *ngIf="pending">
 		<div>{{ 'Catalog.pendingMessage' | translate }}</div>
-		<div class="loader"></div>
+		<div class="loader-products"></div>
 	</div>
 	</div>
 <div class="ui grid posts products-container" [ngClass]="{'opacity15' : pending}">
