--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="ui grid posts products-container" [ngClass]="{'opacity15' : pending}">
 	<pagination-controls class="products-pagination" (pageChange)="p = $event"></pagination-controls>
-	<app-product *ngFor="let product of products | quantityFilter | paginate: { itemsPerPage: 10, currentPage: p }" [product]="product">
+	<app-product *ngFor="let product of products | paginate: { itemsPerPage: 10, currentPage: currentPage, totalItems: total }" [product]="product">
 	</app-product>
-	<pagination-controls class="products-pagination" (pageChange)="p = $event"></pagination-controls>
+	<pagination-controls class="products-pagination" (pageChange)="getProductsFromServer(lang.currentLang, $event, productsPerPage)"></pagination-controls>
 </div>
